# DoubleF

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
example/: example.config  example.csv  example.yaml  example_CN.yaml  example_stations.csv
example/picks/: 20190704.csv
example/traveltime/: mymodel.nd
src/doublef/: __init__.py  batch_cal_score.py  batch_weight.py  cal_score.py  cli.py  csv_tensor.py  get_tt.py  main.py  multiple_iteration.py  perf.py  phase_index.py  sampling.py  transfer_pick.py  visual.py  weight.py  write_results.py
src/doublef.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/doublef/doublef.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
