[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doublef"
version = "0.2.2"
description = "DoubleF: A fast and flexible phase association and earthquake location method"
readme = "README.md"
requires-python = ">=3.9"
license={text="MIT"}
authors = [
    { name = "Longfei Duan", email = "duanlongfei20@mails.ucas.ac.cn" }
]
dependencies = [
    "numpy",
    "obspy",
    "pandas",
    "pyrocko",
    "pyyaml",
    "scipy",
    "sobol_seq",
    "torch>=1.10",
    "tqdm",
]

[project.scripts]
doublef = "doublef.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
